--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -66,3 +66,4 @@ gem 'yabeda-sidekiq'
 gem 'bx_block_cors'
 gem 'devise'
 gem 'inherited_resources', github: 'activeadmin/inherited_resources'
+gem "active_admin_import"
