--- a/app-deploy/values.yaml
+++ b/app-deploy/values.yaml
@@ -20,7 +20,9 @@ appExtConfig:
   # resource limits set below so that needs to be taken into consideration.
   RAILS_MAX_THREADS: "10"
 
-  GOOGLE_APPLICATION_CREDENTIALS: "./../template-app/lib/key.json"
+# GOOGLE_APPLICATION_CREDENTIALS: "./../template-app/lib/key.json"
+GOOGLE_APPLICATION_CREDENTIALS:  "#{Rails.root}/lib/key.json"
+
 
 
 image:
