--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -12,7 +12,9 @@ gem 'pg', '>= 0.18', '< 2.0'
 gem 'puma', '~> 4.1'
 gem 'httparty'
 gem 'google-cloud-vision', '~> 1.1', '>= 1.1.3'
-gem 'whenever', '~> 0.9.4'
+gem 'whenever', require: false
+gem 'ocr_space'
+gem 'kimurai'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
 # Use Active Model has_secure_password
@@ -64,6 +66,8 @@ gem "yabeda-http_requests" #External request monitoring
 gem "yabeda-puma-plugin"
 gem 'yabeda-sidekiq'
 gem 'bx_block_cors'
+gem 'twilio-ruby'
 gem 'devise'
 gem 'inherited_resources', github: 'activeadmin/inherited_resources'
-gem "active_admin_import"
+gem 'active_admin_import'
+gem 'activerecord-import'
