--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -71,3 +71,4 @@ gem 'devise'
 gem 'inherited_resources', github: 'activeadmin/inherited_resources'
 gem 'active_admin_import'
 gem 'activerecord-import'
+gem 'pry'
