--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -72,3 +72,4 @@ gem 'inherited_resources', github: 'activeadmin/inherited_resources'
 gem 'active_admin_import'
 gem 'activerecord-import'
 gem 'pry'
+gem 'rack-cors'
