--- a/app-deploy/values-stage.yaml
+++ b/app-deploy/values-stage.yaml
@@ -22,6 +22,13 @@ appExtConfig:
 
 GOOGLE_APPLICATION_CREDENTIALS:  "#{Rails.root}/lib/key.json"
 
+#minio 
+STORAGE_ACCESS_KEY: "hello"
+STORAGE_BUCKET: "sbucket"
+STORAGE_ENDPOINT: "https://minio.b133842.stage.eastus.az.svc.builder.ai"
+STORAGE_REGION: "builder-1"
+STORAGE_SECRET_ACCESS_KEY: "builderai"
+
 image:
   repository:  registry.gitlab.builder.ai/template-app
   pullPolicy: IfNotPresent
