--- a/template-app/config/storage.yml
+++ b/template-app/config/storage.yml
@@ -6,6 +6,16 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+minio:
+  service: S3
+  access_key_id: <%= ENV['STORAGE_ACCESS_KEY'] %>
+  secret_access_key: <%= ENV['STORAGE_SECRET_ACCESS_KEY'] %>
+  region: <%= ENV['STORAGE_REGION']  %>
+  bucket: <%= ENV['STORAGE_BUCKET'] %>
+  endpoint: <%= ENV['STORAGE_ENDPOINT'] %>
+  force_path_style: true
+
+
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
