--- a/app-deploy/values.yaml
+++ b/app-deploy/values.yaml
@@ -20,6 +20,12 @@ appExtConfig:
   # resource limits set below so that needs to be taken into consideration.
   RAILS_MAX_THREADS: "10"
 
+  # twilio creadentials 
+  ACCOUNT_ID_TWILIO: "AC2bfa27273d30e27e3264af606ee8a0ab"
+  SCREATE_KEY_TWILIO: "7b8ae648de343824ce3fc20bce6062f7" 
+  FROM_NUMBER: "+13512137366"
+  PROVIDER: "TWILIO"
+
 # GOOGLE_APPLICATION_CREDENTIALS: "./../template-app/lib/key.json"
 GOOGLE_APPLICATION_CREDENTIALS:  "#{Rails.root}/lib/key.json"
 
@@ -29,6 +35,7 @@ STORAGE_BUCKET: "sbucket"
 STORAGE_ENDPOINT: "https://minio.b133842.dev.eastus.az.svc.builder.cafe"
 STORAGE_REGION: "builder-1"
 STORAGE_SECRET_ACCESS_KEY: "builderai"
+
 
 
 image:
