--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -11,9 +11,7 @@ gem 'pg', '>= 0.18', '< 2.0'
 # Use Puma as the app server
 gem 'puma', '~> 4.1'
 gem 'httparty'
-gem 'google-cloud-vision', '~> 1.1', '>= 1.1.3'
 gem 'whenever', require: false
-gem 'ocr_space'
 gem 'kimurai'
 # Build JSON APIs with ease. Read more: https://github.com/rails/jbuilder
 # gem 'jbuilder', '~> 2.7'
@@ -31,15 +29,18 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'rspec-rails'
   gem 'rspec-sonarqube-formatter', '~> 1.5'
+  gem 'factory_bot_rails'
 end
 
 group :development do
   gem 'dotenv-rails'
+  gem "rails-erd"
 end
 
 group :test do
   gem 'mock_redis'
   gem 'simplecov', '<= 0.17'
+
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
@@ -67,7 +68,7 @@ gem 'active_admin_role'
 gem 'activeadmin_json_editor'
 gem 'active_admin_datetimepicker'
 gem 'sidekiq_alive'
-gem 'sidekiq', '~> 6.1.0'
+gem 'sidekiq', '~> 6.0.0'
 gem "yabeda-prometheus"    # Base
 gem "yabeda-rails"         #API endpoint monitoring
 gem "yabeda-http_requests" #External request monitoring
@@ -80,5 +81,5 @@ gem 'inherited_resources', github: 'activeadmin/inherited_resources'
 gem 'active_admin_import'
 gem 'activerecord-import'
 gem 'pry'
-
+gem "sidekiq-cron"
 gem 'kaminari'
