--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -31,6 +31,7 @@ group :development, :test do
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
   gem 'rspec-rails'
   gem 'rspec-sonarqube-formatter', '~> 1.5'
+  gem 'rubocop-rails', require: false
 end
 
 group :development do
@@ -69,7 +70,7 @@ gem 'active_admin_role'
 gem 'activeadmin_json_editor'
 gem 'active_admin_datetimepicker'
 gem 'sidekiq_alive'
-gem 'sidekiq', '~> 6.0.0'
+gem 'sidekiq'
 gem "yabeda-prometheus"    # Base
 gem "yabeda-rails"         #API endpoint monitoring
 gem "yabeda-http_requests" #External request monitoring
