--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -42,7 +42,7 @@ end
 group :test do
   gem 'mock_redis'
   gem 'simplecov', '<= 0.17'
-
+  gem 'rspec-sidekiq'
 end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
