--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -34,6 +34,7 @@ group :development, :test do
   gem 'rubocop-rails', require: false
   gem 'factory_girl_rails'
   gem 'faker'
+  gem "timecop"
 end
 
 group :development do
