added changes in application.rb #[824065]

--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -82,11 +82,11 @@ gem 'yabeda-sidekiq'
 gem 'bx_block_cors'
 gem 'twilio-ruby'
 gem 'devise'
-gem 'inherited_resources' # github: 'activeadmin/inherited_resources'
+gem 'inherited_resources'# github: 'activeadmin/inherited_resources'
 gem 'active_admin_import'
 gem 'activerecord-import'
 gem 'pry'
 gem "sidekiq-cron"
 gem 'kaminari'
 gem 'bmi_calculator', '~> 0.2.1'
-gem 'redis', '~> 4.8.0'
+gem 'redis', '~> 5.0', '>= 5.0.5'
