--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -89,4 +89,5 @@ gem 'pry'
 gem "sidekiq-cron"
 gem 'kaminari'
 gem 'bmi_calculator', '~> 0.2.1'
-gem 'redis', '~> 5.0', '>= 5.0.5'
+gem 'redis', '~> 4.8.0'#, '>= 5.0.5'
+gem 'i18n'
