--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -89,5 +89,6 @@ gem 'pry'
 gem "sidekiq-cron"
 gem 'kaminari'
 gem 'bmi_calculator', '~> 0.2.1'
-gem 'redis', '< 4.6'
 gem 'i18n'
+gem 'redis', '~> 5.0', '>= 5.0.5'
+gem 'sidekiq-status'
