--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -91,7 +91,7 @@ gem "sidekiq-cron"
 gem 'kaminari'
 gem 'bmi_calculator', '~> 0.2.1'
 gem 'i18n'
-gem 'redis', '~> 5.0', '>= 5.0.5'
 gem 'sidekiq-status'
 gem 'sidekiq-unique-jobs'
 gem 'activeadmin_quill_editor'
+gem 'redis', '< 4.6'
