--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -38,6 +38,7 @@ group :development, :test do
   gem 'faker'
   gem 'shoulda-matchers'
   gem 'shoulda-callback-matchers'
+  gem 'rswag-specs'
 end
 
 group :test do
@@ -95,4 +96,6 @@ gem 'sidekiq-status'
 gem 'sidekiq-unique-jobs'
 gem 'activeadmin_quill_editor'
 gem 'redis', '< 4.6'
+gem 'rswag-api'
+gem 'rswag-ui'
 
