--- a/template-app/Gemfile
+++ b/template-app/Gemfile
@@ -94,5 +94,5 @@ gem 'sidekiq-unique-jobs'
 gem 'activeadmin_quill_editor'
 gem 'redis', '< 4.6'
 gem 'rswag'
-# gem 'rswag-ui'
 gem 'timecop', '~> 0.9.5'
+gem 'rspec-sonarqube-formatter'
