[#933201] push notification changes

--- a/app-deploy/values.yaml
+++ b/app-deploy/values.yaml
@@ -190,4 +190,4 @@ affinitySidekiq:
                   - app-deploySidekiq
             topologyKey: "kubernetes.io/hostname"
             
-FCM_SEVER_KEY: "AAAA664EMvU:APA91bFirF8hrvyRK3_EbhNhL5rw_hxscc5UjjuOhQVjBhGb3_IqhjM4M8Dh8r4O-QbCwWKl8XBMSdEHHIFG4ggqQEUHk5FpF7js2zdXFNqHonX-qkALeOpSqb7f6Xq3eGVYeB_fcUXF"
+FCM_SEVER_KEY: "AAAAjmCG0wg:APA91bF48wEEPJ0p7m6ydOgzOv8B7TxKQ8CsGYicOhrTFN5mQd3vARGn9oFFMxCw8l3FFCc_9fHcO5anefy07HOlO2QsmyqzDXF_x7-sTSHEAv6kvk4eEPP-5xJWKn-sakVVApABKKmR"
